Fix prefix spacing issue in code mockup design

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -31,7 +31,7 @@
   animation: animated-gradient 6s ease infinite alternate;
 }
 
-.mockup-code pre:before {
+.mockup-code .generator-command pre:before {
   margin-right: 0;
 }
 
